# portfolio_tracker

./: .env.example  Aandelen Portfolio Rendement.xlsx  CLAUDE.md  EDCA - Aandelen.xlsx  README.md  aandelen_berekeningen.py  aandelen_prijs_ophalen.py  claude_api.py  email_automatisering.py  excel_utils.py  main.py  notities.txt  pyproject.toml  run_email_rapport.py
.github/workflows/: weekly_rapport.yml
snapshots/: snapshot_2026-06-13.json  snapshot_2026-06-19.json  snapshot_2026-06-21.json  snapshot_2026-06-26.json  snapshot_2026-07-03.json  snapshot_2026-07-10.json  snapshot_2026-07-17.json  snapshot_2026-07-24.json
